Add color name to cart response